# glow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
assets/shaders/: basic.frag  basic.vert  environment.frag  environment.vert  framebuffer.frag  framebuffer.vert  shading.vert
assets/shaders/gl/: environment.frag  environment.vert  framebuffer.frag  framebuffer.vert  shading.frag  shading.vert
assets/shaders/vk/: compile.sh  shading.frag  shading.frag.spv  shading.vert  shading.vert.spv
cmake/: glow.cmake  gravel.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/common/: hash.hpp  predef.hpp  primitives.hpp  result.hpp
src/core/common/debug/: assert.cpp  assert.hpp  error.cpp  error.hpp
src/core/common/type/: array.hpp  chrono.hpp  dispatcher.hpp  ecs.hpp  fstream.hpp  map.hpp  math.hpp  maybe.hpp  memory.hpp  pair.hpp  path.hpp  set.hpp  string.hpp  vector.hpp
src/core/engine/: backend.cpp  backend.hpp  engine.cpp  engine.hpp  engine_initializer.cpp  engine_initializer.hpp
src/core/engine/backends/: opengl_backend.cpp  opengl_backend.hpp  vulkan_backend.cpp  vulkan_backend.hpp
src/core/graphics/: buffer_usage.hpp  buffers.hpp  camera.cpp  camera.hpp  environment.hpp  graphics_api.cpp  graphics_api.hpp  perspective_camera.cpp  perspective_camera.hpp  renderer_info.hpp  rendering_options.hpp  shader_type.hpp  vertex.hpp
src/core/graphics/component/: gl_model.cpp  gl_model.hpp
src/core/graphics/opengl/: buffer.cpp  buffer.hpp  buffer_usage.hpp  buffers.cpp  buffers.hpp  context.cpp  context.hpp  framebuffer.cpp  framebuffer.hpp  index_buffer.cpp  index_buffer.hpp  model.cpp  model.hpp  opengl_backend.cpp  opengl_backend.hpp  program.cpp  program.hpp  quad.cpp  quad.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_buffers.hpp  texture_2d.cpp  texture_2d.hpp  texture_cache.hpp  uniform_buffer.cpp  uniform_buffer.hpp  util.cpp  util.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/core/graphics/opengl/component/: model.hpp
src/core/graphics/vulkan/: allocator.cpp  allocator.hpp  buffer.cpp  buffer.hpp  buffers.cpp  buffers.hpp  command_buffer.cpp  command_buffer.hpp  command_pool.cpp  context.cpp  context.hpp  debug_messenger.cpp  debug_messenger.hpp  device.cpp  device.hpp  fence.cpp  fence.hpp  frame.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_cache.hpp  image_view.cpp  image_view.hpp  imgui.cpp  imgui.hpp  instance.cpp  instance.hpp  managed.cpp  managed.hpp  model.cpp  model.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  queue.cpp  (+23 more)
src/core/graphics/vulkan/cmd/: command_buffer.cpp  command_buffer.hpp  command_pool.cpp  command_pool.hpp  commands.cpp  commands.hpp
src/core/graphics/vulkan/image/: framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  image_cache.hpp  image_view.cpp  image_view.hpp  sampler.cpp  sampler.hpp  texture.cpp  texture.hpp
src/core/graphics/vulkan/pipeline/: descriptor.cpp  descriptor.hpp  descriptor_pool.cpp  descriptor_pool.hpp  descriptor_set_layout.cpp  descriptor_set_layout.hpp  pipeline.cpp  pipeline.hpp  pipeline_builder.cpp  pipeline_builder.hpp  pipeline_cache.cpp  pipeline_cache.hpp  pipeline_layout.cpp  pipeline_layout.hpp  shader.cpp  shader_module.cpp  shader_module.hpp
src/core/graphics/vulkan/swapchain/: framebuffer.cpp  framebuffer.hpp  swapchain.cpp  swapchain.hpp
src/core/graphics/vulkan/sync/: fence.cpp  fence.hpp  semaphore.cpp  semaphore.hpp
src/core/graphics/vulkan/util/: constants.hpp  debug_messenger.cpp  debug_messenger.hpp  size.hpp  version.cpp  version.hpp  vk_call.cpp  vk_call.hpp
src/core/init/: dear_imgui.cpp  dear_imgui.hpp  dear_imgui_opengl.cpp  dear_imgui_opengl.hpp  dear_imgui_vulkan.cpp  dear_imgui_vulkan.hpp  sdl.cpp  sdl.hpp  window.cpp  window.hpp
src/core/io/: command_line_parser.cpp  command_line_parser.hpp  files.cpp  files.hpp  model_loader.cpp  model_loader.hpp  texture_loader.cpp  texture_loader.hpp
src/core/scene/: camera.cpp  camera.hpp  identifier.hpp  node.hpp  scene.cpp  scene.hpp  transform.cpp  transform.hpp
src/core/scene/component/: identifier.hpp  node.hpp  transform.cpp  transform.hpp
src/core/ui/: camera_options.hpp  dock_space.cpp  dock_space.hpp  events.hpp  gizmos.cpp  gizmos.hpp  menu_bar.cpp  menu_bar.hpp  scene_tree_dock.cpp  scene_tree_dock.hpp  scene_viewport.cpp  scene_viewport.hpp
src/core/util/: arrays.hpp  bits.hpp  files.hpp  textures.cpp  textures.hpp
src/editor/: CMakeLists.txt
src/editor/app/: main.cpp
src/private/core/: CMakeLists.txt
src/private/core/foundation/: assert.cpp  error.cpp
src/private/core/io/: file_io.cpp
src/private/core/platform/: sdl.cpp  sdl.hpp  vulkan.cpp  window.cpp
src/private/core/plugins/: plugin.cpp  plugin_manager.cpp
src/private/core/rhi/: pixel_format.cpp
src/private/editor/: editor_app.cpp
src/private/opengl-rhi/: CMakeLists.txt
src/private/vulkan-rhi/: CMakeLists.txt  vk_allocator.cpp
src/public/glow/core/: prelude.hpp
src/public/glow/core/engine/: app_delegate.hpp
src/public/glow/core/foundation/: assert.hpp  error.hpp  flags.hpp  hash.hpp
src/public/glow/core/io/: file_io.hpp
src/public/glow/core/math/: matrix.hpp  vector.hpp
src/public/glow/core/platform/: vulkan.hpp  window.hpp
src/public/glow/core/plugins/: plugin.hpp  plugin_manager.hpp
src/public/glow/core/rhi/: buffer.hpp  command_buffer.hpp  graphics_api.hpp  image.hpp  pixel_format.hpp  render_context.hpp  render_device.hpp  resource_manager.hpp  rhi.hpp  shader.hpp
src/public/glow/editor/: editor_app.hpp
src/public/glow/vulkan-rhi/: vk_allocator.hpp  vk_rhi.hpp
